--- a/client/src/app/components/cover-letters/cover-letters.component.html
+++ b/client/src/app/components/cover-letters/cover-letters.component.html
@@ -10,7 +10,8 @@
           <app-letter-list></app-letter-list>
       </div>
       <div fxFlex="65" class="sec2" fxFlex="65">
-        <router-outlet></router-outlet>
+        <!-- <router-outlet></router-outlet> -->
+        <app-letter-info></app-letter-info>
       </div>
     </div>
   </div>
