--- a/client/src/app/components/main/main/main.component.html
+++ b/client/src/app/components/main/main/main.component.html
@@ -108,18 +108,18 @@
                 <div class="row">
                   <div class="features-item">
                     <i class="fas fa-hand-holding-usd"></i>
-                    <h5>Is free</h5>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <h5>We save your money</h5>
+                    <p>ArgosyCRM is a free app so you don't need to pay for using it</p>
                   </div>
                   <div class="features-item">
                     <i class="fas fa-user-graduate"></i>
-                    <h5>Easy to use</h5>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <h5>We appreciate your time</h5>
+                    <p>You just create your account, download all the data you need for deal-making and run your business successfully</p>
                   </div>
                   <div class="features-item">
                     <i class="fas fa-tablet-alt"></i>
-                    <h5>Responsive Design</h5>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <h5>We go all out for you</h5>
+                    <p>ArgosyCRM renders well no matter what device you use and what screen size it has</p>
                   </div>
                 </div>
               </div>
@@ -144,10 +144,10 @@
                       <img src="assets/img/features-mid-block1.png" alt="">
                     </div>
                     <div class="features-mid-description">
-                      <h2>Lorem ipsum 1</h2>
+                      <h2>Personal account </h2>
                       <span class="section-title-line"></span>
-                      <p>Lorem ipsum 1 dolor sit amet consectetur adipisicing elit. Nostrum ipsum, est commodi nam odio itaque ullam. Fugit ut neque consequatur omnis, expedita fuga necessitatibus iste nobis, maxime sequi qui quaerat.</p>
-                      <button mat-raised-button color="primary">Create account</button>
+                      <p>Create your personal account where you can store all the necessary information about both your customers and your employees.</p>
+                      <button mat-raised-button color="primary" (click)="onShowSignupModal()">Create account</button>
                     </div>
                   </div>
                 </div>
@@ -159,10 +159,9 @@
                 <div class="container">
                   <div class="row">
                     <div class="features-mid-description second-description">
-                        <h2>Lorem ipsum 2</h2>
+                        <h2>Convenient communication</h2>
                         <span class="section-title-line"></span>
-                        <p>Lorem ipsum 2 dolor sit amet consectetur adipisicing elit. Nostrum ipsum, est commodi nam odio itaque ullam. Fugit ut neque consequatur omnis, expedita fuga necessitatibus iste nobis, maxime sequi qui quaerat.</p>
-                        <button mat-raised-button color="primary">Read more</button>
+                        <p>ArgosyCRM is a great tool for convenient communication with your clients. We can help you manage your workflow faster as everything you need is already collected in one place.</p>
                     </div>
                     <div class="features-mid-img">
                       <img src="assets/img/features-mid-block2.png" alt="">
@@ -200,7 +199,7 @@
                     </div>
 
                     <mat-form-field>
-                      <textarea matInput placeholder="Textarea"></textarea>
+                      <textarea matInput placeholder="Message"></textarea>
                     </mat-form-field>
                     <button mat-raised-button color="primary">Send message</button>
               </form>
