work on cover letters form

--- a/client/src/app/components/cover-letters/letter-info/letter-info.component.html
+++ b/client/src/app/components/cover-letters/letter-info/letter-info.component.html
@@ -1,39 +1,54 @@
 <div class="letter-info">
-  <mat-card>
-    <mat-card-header>
-      <a class="closeInfo"><i class="fas fa-times"></i></a>
-      <mat-card-title>in work...</mat-card-title>
-      <i class="fas fa-list-ul"></i>
-    </mat-card-header>
-    <form  class="letter-info-form">
-      <mat-form-field>
-        <input matInput placeholder="Title" >
-      </mat-form-field>
+    <mat-card>
+      <mat-card-header>
+        <a class="closeInfo"><i class="fas fa-times"></i></a>
+        <mat-card-title>in work...</mat-card-title>
+        <i class="fas fa-list-ul"></i>
+      </mat-card-header>
+      <form  class="letter-info-form" [formGroup]="coverLetterForm">
+        <!-- <mat-form-field>
+          <input matInput placeholder="Title" formControlName="title">
+        </mat-form-field> -->
 
-      <div class="cover-wrapper">
-        <span class="delete-cover-item" ><mat-icon>delete_outline</mat-icon></span>
-        <mat-form-field>
-            <textarea matInput placeholder="Cover"></textarea>
-        </mat-form-field>
-      </div>
+        <div *ngFor="let letter of coverLetterForm.controls | keyvalue" class="cover-wrapper">
 
-      <div class="cover-wrapper">
-        <span class="delete-cover-item" ><mat-icon>delete_outline</mat-icon></span>
-        <mat-form-field>
-            <textarea matInput placeholder="Cover"></textarea>
-        </mat-form-field>
-      </div>
+          <span (click)="removeLetterField(letter)" class="delete-cover-item" ><mat-icon>delete_outline</mat-icon></span>
+          <mat-form-field>
+              <textarea matInput placeholder="{{letter.key}}" required></textarea>
+          </mat-form-field>
+        </div>
 
-    <div class="buttons">
-      <button mat-raised-button color="primary" [disabled]="">Add cover</button>
-      <a mat-raised-button color="warn">Delete</a>
-    </div>
 
-    </form>
-    <mat-divider></mat-divider>
+        <!-- <div *ngFor="let letter of coverLetterForm.controls | keyvalue" class="cover-wrapper">
+          <span (click)="removeLetterField(letter)" class="delete-cover-item" ><mat-icon>delete_outline</mat-icon></span>
+          <mat-form-field>
+              <textarea matInput placeholder="{{letter.key}}" required></textarea>
+          </mat-form-field>
+        </div> -->
 
-  </mat-card>
-</div>
+        <!-- <div class="cover-wrapper">
+          <span class="delete-cover-item" ><mat-icon>delete_outline</mat-icon></span>
+          <mat-form-field>
+              <textarea matInput placeholder="Cover letter text"></textarea>
+          </mat-form-field>
+        </div> -->
+
+        <div class="add-field">
+          <button (click)="addLetterField()" mat-icon-button color="primary" matTooltip="add field"  matTooltipPosition="right">
+            <mat-icon aria-label="Example icon-button with a heart icon">playlist_add</mat-icon>
+          </button>
+        </div>
+
+        <div class="buttons">
+          <button mat-raised-button color="primary" [disabled]="">Save</button>
+          <a mat-raised-button color="warn">Delete</a>
+        </div>
+
+      </form>
+      <mat-divider></mat-divider>
+
+    </mat-card>
+  </div>
 
 
 
