--- a/client/src/app/components/cover-letters/letter-info/letter-info.component.scss
+++ b/client/src/app/components/cover-letters/letter-info/letter-info.component.scss
@@ -45,6 +45,9 @@
         }
       }
     }
+    .add-field {
+      padding-bottom: 1.25rem;
+    }
     .buttons {
       display: flex;
       justify-content: space-between;
