added 404 page and changed routes

--- a/client/src/app/components/page-not-found/page-not-found.component.html
+++ b/client/src/app/components/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
-  <h1>Oooops</h1>
-  <h3>The page you are looking for cannot be found</h3>
-  <a routerLink="/main" mat-raised-button color="primary">To the main page</a>
+<div class="not-found-page">
+  <p class="numbers">404</p>
+  <p class="message">Sorry, the page you are looking for cannot be found</p>
+  <a routerLink="/" mat-raised-button>To the main page</a>
 </div>
