list/show/edit letters

--- a/client/src/app/components/cover-letters/cover-letters.component.html
+++ b/client/src/app/components/cover-letters/cover-letters.component.html
@@ -10,8 +10,7 @@
           <app-letter-list></app-letter-list>
       </div>
       <div fxFlex="65" class="sec2" fxFlex="65">
-        <!-- <router-outlet></router-outlet> -->
-        <app-letter-info></app-letter-info>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
