--- a/client/src/app/components/cover-letters/letter-list/letter-list.component.html
+++ b/client/src/app/components/cover-letters/letter-list/letter-list.component.html
@@ -5,14 +5,10 @@
         <i class="far fa-file-alt"></i>
     </mat-card-header>
       <mat-list>
-          <!-- <mat-list-item *ngIf="clients?.length == 0">Not yet</mat-list-item> -->
-        <ng-container>
-          <!-- <a [routerLink]="'edit/' + client._id" class="letter-item-link">
-            <mat-list-item class="list-item">{{client?.name}} {{client?.last_name}}</mat-list-item>
-            <mat-divider></mat-divider>
-          </a> -->
-          <a [routerLink]="" class="letter-item-link">
-            <mat-list-item class="letter-item"><span matBadge="2" matBadgeOverlap="false">in work...</span></mat-list-item>
+       <mat-list-item *ngIf="coverLetters?.length == 0">Not yet</mat-list-item>
+        <ng-container *ngFor="let letter of coverLetters">
+          <a [routerLink]="'edit/' + letter._id" class="letter-item-link">
+            <mat-list-item class="letter-item"><span matBadge="{{letter.letters.length}}" matBadgeOverlap="false">{{letter?.title}}</span></mat-list-item>
             <mat-divider></mat-divider>
           </a>
         </ng-container>
