--- a/client/src/app/modules/clients/components/client-info/client-info.component.scss
+++ b/client/src/app/modules/clients/components/client-info/client-info.component.scss
@@ -64,6 +64,9 @@
       }
     }
     mat-list {
+      i {
+        margin-left: 8px;
+      }
       a {
         text-decoration: none;
         color: rgba(0,0,0,.87);
