--- a/client/src/app/components/contact-made/project/project.component.html
+++ b/client/src/app/components/contact-made/project/project.component.html
@@ -81,8 +81,11 @@
           <div class="field">
               <mat-form-field class="mat-form-field-style">
                   <mat-select placeholder="type" formControlName="type" required>
-                      <mat-option *ngFor="let type of dataForSelect?.not_types" [value]="type._id">
+                      <!-- <mat-option *ngFor="let type of dataForSelect?.not_types" [value]="type._id">
                           {{type.name}}
+                      </mat-option> -->
+                      <mat-option [value]="dataForSelect?.not_types[0]._id">
+                          {{dataForSelect?.not_types[0].name}}
                       </mat-option>
                   </mat-select>
                   <mat-error *ngIf="projectForm.get('type').hasError('required')">
