--- a/client/src/app/components/main/signup/signup.component.scss
+++ b/client/src/app/components/main/signup/signup.component.scss
@@ -3,6 +3,9 @@ form {
   .error-from-back {
     text-align: center;
     margin-top: 10px;
+    @media screen and (max-width: 575.98px) {
+      margin-top: 0 !important;
+     }
   }
   .submit-button{
     margin-top: 15px;
